--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,5 @@
 source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '10.3'
 use_frameworks!
 workspace './PagingMenuControllerDemo.xcworkspace'
 
@@ -17,7 +18,7 @@ end
 post_install do |installer|
  installer.pods_project.targets.each do |target|
    target.build_configurations.each do |config|
-     config.build_settings['SWIFT_VERSION'] = '4.0'
+     config.build_settings['SWIFT_VERSION'] = '5.0'
    end
  end
 end
